--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "rxjs": "^6.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
