--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "rxjs": "^6.0.0",
+    "ts-loader": "^4.4.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -34,7 +37,7 @@
     "chalk": "^2.1.0",
     "chromedriver": "^2.33.1",
     "connect-history-api-fallback": "^1.4.0",
-    "copy-webpack-plugin": "^4.1.1",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.0.5",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.7",
@@ -52,7 +55,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.1",
     "karma": "^1.7.1",
@@ -63,11 +66,11 @@
     "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.5",
+    "karma-webpack": "^3.0.0",
     "mocha": "^4.0.1",
     "nightwatch": "^0.9.16",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.15",
     "rimraf": "^2.6.2",
@@ -82,9 +85,9 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.7.1",
+    "webpack": "^4.0.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
   },
