--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aframe": "^0.8.2",
+    "axios": "^0.18.0",
     "register-service-worker": "^1.0.0",
+    "rxjs": "^6.3.3",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
